# e2b-cookbook

./: package-lock.json
examples/agentkit-coding-agent/: package-lock.json  package.json
examples/claude-code-interpreter-js/: package-lock.json
examples/codestral-code-interpreter-js/: package-lock.json
examples/docker-in-e2b/js/: package-lock.json
examples/gpt-4o-js/: package-lock.json
examples/hello-world-js/: package-lock.json
examples/langchain-python/: pyproject.toml
examples/langgraph-python/: pyproject.toml
examples/llama-3-code-interpreter-js/: package-lock.json
examples/nextjs-code-interpreter/: package-lock.json  package.json
examples/o1-and-gpt-4-js/: package-lock.json
examples/openai-js/: package-lock.json
examples/scrape-and-analyze-airbnb-data-with-firecrawl/: package-lock.json
examples/together-ai-with-code-interpreting/together-ai-code-interpreter-js/: package-lock.json  package.json
